force-app/main/default/objects/Currency_Conversion__c/Currency_Conversion__c.object-meta.xml
<CustomObject>
    <label>Currency Conversion</label>
    <nameField>
        <label>Currency Conversion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currencies Conversion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>