force-app/main/default/objects/Currency_Conversion__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <description>The currency to convert</description>
    <inlineHelpText>The currency to convert</inlineHelpText>
    <label>From</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>