force-app/main/default/objects/Currency_Conversion__c/fields/From_Amount__c.field-meta.xml
<CustomField>
    <fullName>From_Amount__c</fullName>
    <description>The amount to convert</description>
    <label>From Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>