force-app/main/default/objects/Currency_Conversion__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <description>The currency to which to convert</description>
    <inlineHelpText>The currency to which to convert</inlineHelpText>
    <label>To</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>