force-app/main/default/objects/Currency_Conversion__c/fields/To_Amount__c.field-meta.xml
<CustomField>
    <fullName>To_Amount__c</fullName>
    <description>The converted amount</description>
    <label>To Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>